--- a/www/css/style-basic.css
+++ b/www/css/style-basic.css
@@ -3568,6 +3568,11 @@ h2 .lighter {
     margin: 0 0 10px 0;
   }
 }
+.menu-wrapper {
+  -webkit-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
 @media (min-width: 950px) {
   .menu-wrapper {
     top: 101px;
@@ -3578,6 +3583,18 @@ h2 .lighter {
 @media (min-width: 1650px) {
   .menu-wrapper {
     right: 50px;
+  }
+  .has-overlay .menu-wrapper {
+    left: 1230px;
+    top: 10px;
+  }
+}
+@media (max-width: 750px) {
+  .menu-wrapper {
+    top: 0;
+    left: 0;
+    right: 0;
+    width: auto;
   }
 }
 .menu-wrapper .point-type-options {
