Accessibility: elements in focus, tab navigation

--- a/less/style-basic.less
+++ b/less/style-basic.less
@@ -28,6 +28,8 @@
 
 @import "../ISOF-React-modules/less/sitevision.less";
 
+@import "../ISOF-React-modules/less/accessibility.less";
+
 @color-red: #a6192e;
 @color-red-lighter: #d4454c;
 @color-red-divider: #b62837;
